--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "deploy": "npm run build:prod && npx gh-pages -d dist -e rs-clone"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,11 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.29.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "node-sass": "^8.0.0",
     "prettier": "2.8.1",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
